fix:修改镜像脚本